--- a/sass/modules/post-card/_post-details.scss
+++ b/sass/modules/post-card/_post-details.scss
@@ -27,7 +27,8 @@
       height: 522px;
     }
     &.format-gallery,
-    &.format-image {
+    &.format-image,
+    &.format-audio {
       .post-meta{
         margin-top: 20px;
       }
